--- a/app/components/admin/budget_headings/headings_component.html.erb
+++ b/app/components/admin/budget_headings/headings_component.html.erb
@@ -10,6 +10,7 @@
         <% if budget.approval_voting? %>
           <th><%= Budget::Heading.human_attribute_name(:max_ballot_lines) %></th>
         <% end %>
+        <th><%= Budget::Heading.human_attribute_name(:geography) %></th>
         <th><%= t("admin.actions.actions") %></th>
       </tr>
     </thead>
@@ -23,6 +24,9 @@
           <% if budget.approval_voting? %>
             <td><%= heading.max_ballot_lines %></td>
           <% end %>
+          <td>
+            <%= geography_name(heading) %>
+          </td>
           <td>
             <%= render Admin::TableActionsComponent.new(heading) %>
           </td>
