--- a/app/components/budgets/map_component.html.erb
+++ b/app/components/budgets/map_component.html.erb
@@ -1,4 +1,4 @@
 <div class="map inline">
   <h2><%= t("budgets.index.map") %></h2>
-  <%= render_map(nil, investments_coordinates: coordinates) %>
+  <%= render_map(nil, investments_coordinates: coordinates, polygons_data: polygons_data) %>
 </div>
