--- a/app/views/legislation/annotations/_comments_box_form.js.erb
+++ b/app/views/legislation/annotations/_comments_box_form.js.erb
@@ -11,5 +11,5 @@ $('#comments-box-<%= annotation.id %> a.publish-comment').on({
 <% if comment.errors.any? %>
   $('#comments-box-<%= @annotation.id %> a.publish-comment').hide();
   $('#js-comment-form-annotation-<%= annotation.id %>').toggle();
-  $('#js-comment-form-annotation-<%= annotation.id %> textarea').focus();
+  $("#js-comment-form-annotation-<%= annotation.id %> textarea").trigger("focus");
 <% end %>
