--- a/app/components/admin/proposals/toggle_selection_component.html.erb
+++ b/app/components/admin/proposals/toggle_selection_component.html.erb
@@ -1,1 +1,1 @@
-<%= button_to(path, options) { text } %>
+<%= render Admin::ToggleSwitchComponent.new(action, proposal, pressed: selected?, **options) %>
