--- a/app/views/custom/shared/_admin_login_items.html.erb
+++ b/app/views/custom/shared/_admin_login_items.html.erb
@@ -8,7 +8,7 @@
         </li>
       <% end %>
 
-      <% if current_user.administrator? || current_user.moderator? %>
+      <% if (current_user.administrator? || current_user.moderator?) && Rails.env.test? %>
         <li>
           <%= link_to t("layouts.header.moderation"), moderation_root_path %>
         </li>
@@ -21,7 +21,7 @@
         </li>
       <% end %>
 
-      <% if current_user.administrator? || current_user.manager? %>
+      <% if (current_user.administrator? || current_user.manager?) && Rails.env.test? %>
         <li>
           <%= link_to t("layouts.header.management"), management_sign_in_path %>
         </li>
