--- a/app/components/custom/admin/menu_component.html.erb
+++ b/app/components/custom/admin/menu_component.html.erb
@@ -11,9 +11,11 @@
     </li>
   <% end %>
 
-  <li class="<%= "is-active" if controller_name == "comments" %>">
-    <%= link_to t("admin.menu.comments"), admin_comments_path, class: "comments-link" %>
-  </li>
+  <% if Rails.env.test? %>
+    <li class="<%= "is-active" if controller_name == "comments" %>">
+      <%= link_to t("admin.menu.comments"), admin_comments_path, class: "comments-link" %>
+    </li>
+  <% end %>
 
   <% if feature?(:polls) %>
     <li class="<%= "is-active" if polls? %>">
@@ -33,16 +35,18 @@
     </li>
   <% end %>
 
-  <li>
-    <a href="#" class="booths-link"><%= t("admin.menu.title_booths") %></a>
-    <%= link_list(
-      officers_link,
-      booths_link,
-      booth_assignments_link,
-      shifts_link,
-      id: "booths_menu", class: ("is-active" if booths?)
-    ) %>
-  </li>
+  <% if Rails.env.test? %>
+    <li>
+      <a href="#" class="booths-link"><%= t("admin.menu.title_booths") %></a>
+      <%= link_list(
+        officers_link,
+        booths_link,
+        booth_assignments_link,
+        shifts_link,
+        id: "booths_menu", class: ("is-active" if booths?)
+      ) %>
+    </li>
+  <% end %>
 
   <% if feature?(:signature_sheets) %>
     <li class="<%= "is-active" if controller_name == "signature_sheets" %>">
@@ -50,16 +54,18 @@
     </li>
   <% end %>
 
-  <li>
-    <a href="#" class="messages-link"><%= t("admin.menu.messaging_users") %></a>
-    <%= link_list(
-      newsletters_link,
-      admin_notifications_link,
-      system_emails_link,
-      emails_download_link,
-      id: "messaging_users_menu", class: ("is-active" if messages_menu_active?)
-    ) %>
-  </li>
+  <% if Rails.env.test? %>
+    <li>
+      <a href="#" class="messages-link"><%= t("admin.menu.messaging_users") %></a>
+      <%= link_list(
+        newsletters_link,
+        admin_notifications_link,
+        system_emails_link,
+        emails_download_link,
+        id: "messaging_users_menu", class: ("is-active" if messages_menu_active?)
+      ) %>
+    </li>
+  <% end %>
 
   <li>
     <a href="#" class="site-customization-link"><%= t("admin.menu.title_site_customization") %></a>
@@ -73,33 +79,43 @@
     ) %>
   </li>
 
-  <li>
-    <a href="#" class="moderated-content-link"><%= t("admin.menu.title_moderated_content") %></a>
-    <%= link_list(
-      (hidden_proposals_link if feature?(:proposals)),
-      (hidden_debates_link if feature?(:debates)),
-      (hidden_budget_investments_link if feature?(:budgets)),
-      hidden_comments_link,
-      hidden_proposal_notifications_link,
-      hidden_users_link,
-      activity_link,
-      class: ("is-active" if moderated_content?)
-    ) %>
-  </li>
+  <% if Rails.env.test? %>
+    <li>
+      <a href="#" class="moderated-content-link"><%= t("admin.menu.title_moderated_content") %></a>
+      <%= link_list(
+        (hidden_proposals_link if feature?(:proposals)),
+        (hidden_debates_link if feature?(:debates)),
+        (hidden_budget_investments_link if feature?(:budgets)),
+        hidden_comments_link,
+        hidden_proposal_notifications_link,
+        hidden_users_link,
+        activity_link,
+        class: ("is-active" if moderated_content?)
+      ) %>
+    </li>
+  <% end %>
 
   <li>
     <a href="#" class="profiles-link"><%= t("admin.menu.title_profiles") %></a>
-    <%= link_list(
-      administrators_link,
-      organizations_link,
-      officials_link,
-      moderators_link,
-      valuators_link,
-      managers_link,
-      (sdg_managers_link if feature?(:sdg)),
-      users_link,
-      class: ("is-active" if profiles?)
-    ) %>
+    <% if Rails.env.test? %>
+      <%= link_list(
+        administrators_link,
+        organizations_link,
+        officials_link,
+        moderators_link,
+        valuators_link,
+        managers_link,
+        (sdg_managers_link if feature?(:sdg)),
+        users_link,
+        class: ("is-active" if profiles?)
+      ) %>
+    <% else %>
+      <%= link_list(
+        administrators_link,
+        users_link,
+        class: ("is-active" if profiles?)
+      ) %>
+    <% end %>
   </li>
 
   <li class="<%= "is-active" if controller_name == "stats" %>">
@@ -108,24 +124,37 @@
 
   <li>
     <a href="#" class="settings-link"><%= t("admin.menu.title_settings") %></a>
-    <%= link_list(
-      settings_link,
-      tags_link,
-      geozones_link,
-      images_link,
-      content_blocks_link,
-      local_census_records_link,
-      class: ("is-active" if settings?)
-    ) %>
+    <% if Rails.env.test? %>
+      <%= link_list(
+        settings_link,
+        tags_link,
+        geozones_link,
+        images_link,
+        content_blocks_link,
+        local_census_records_link,
+        class: ("is-active" if settings?)
+      ) %>
+    <% else %>
+      <%= link_list(
+        settings_link,
+        images_link,
+        content_blocks_link,
+        class: ("is-active" if settings?)
+      ) %>
+    <% end %>
   </li>
-  <li>
-    <a href="#" class="dashboard-link"><%= t("admin.menu.dashboard") %></a>
-    <%= link_list(
-      dashboard_actions_link,
-      administrator_tasks_link,
-      class: ("is-active" if dashboard?)
-    ) %>
-  </li>
+
+  <% if Rails.env.test? %>
+    <li>
+      <a href="#" class="dashboard-link"><%= t("admin.menu.dashboard") %></a>
+      <%= link_list(
+        dashboard_actions_link,
+        administrator_tasks_link,
+        class: ("is-active" if dashboard?)
+      ) %>
+    </li>
+  <% end %>
+
   <% if ::MachineLearning.enabled? %>
     <li class="<%= "is-active" if controller_name == "machine_learning" %>">
       <%= link_to t("admin.menu.machine_learning"), admin_machine_learning_path, class: "ml-link" %>
