--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -572,8 +572,22 @@ footer .logo a {
   }
 }
 
-.auth-divider {
-  border: 0;
-  cursor: pointer;
-  height: auto;
+.button.button-saml {
+  background: #ecf7fc;
+  border-left: 3px solid #45b0e3;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  &::before {
+    background: image-url("gobcan-logo-simple.png") top center no-repeat;
+    background-size: contain;
+    content: "";
+    height: 2em;
+    width: 2em;
+  }
+}
+
+.saml-link {
+  padding-top: 0.5rem;
 }
