Check when a line is executed

--- a/app/views/admin/poll/questions/_form.html.erb
+++ b/app/views/admin/poll/questions/_form.html.erb
@@ -11,6 +11,7 @@
       <% if @poll.present? %>
         <%= f.hidden_field :poll_id, value: @poll.id %>
       <% elsif @question.poll.present? %>
+        <% puts "Heeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeyyyyyy!" %>
         <%= f.hidden_field :poll_id, value: @question.poll.id %>
       <% else %>
         <div class="small-12 medium-6 large-4 column">
