--- a/app/components/admin/poll/questions/form_component.html.erb
+++ b/app/components/admin/poll/questions/form_component.html.erb
@@ -8,10 +8,11 @@
 
   <div class="row">
     <div class="small-12">
-      <% if poll.present? %>
-        <%= f.hidden_field :poll_id, value: poll.id %>
-      <% elsif question.poll.present? %>
+      <% if question.poll.present? %>
         <%= f.hidden_field :poll_id, value: question.poll.id %>
+      <% elsif poll.present? %>
+        <% puts "Heeeeeeeeeeeeeeeeeeeeeeeeeeey" %>
+        <%= f.hidden_field :poll_id, value: poll.id %>
       <% else %>
         <div class="small-12 medium-6 large-4 column">
           <% select_options = Poll.all.map { |p| [p.name, p.id] } %>
