--- a/app/components/layout/account_menu_component.html.erb
+++ b/app/components/layout/account_menu_component.html.erb
@@ -1,5 +1,7 @@
 <ul class="menu" data-responsive-menu="medium-dropdown">
-  <%= render "shared/admin_login_items", current_user: user %>
-  <%= render "layouts/notification_item", current_user: user %>
+  <% unless multitenancy_management_mode? %>
+    <%= render "shared/admin_login_items", current_user: user %>
+    <%= render "layouts/notification_item", current_user: user %>
+  <% end %>
   <%= render "devise/menu/login_items", current_user: user %>
 </ul>
