--- a/app/components/layout/admin_header_component.html.erb
+++ b/app/components/layout/admin_header_component.html.erb
@@ -2,8 +2,10 @@
   <div class="top-links">
     <%= render "shared/locale_switcher" %>
 
-    <%= link_to root_path do %>
-      <%= t("admin.dashboard.index.back", org: setting["org_name"]) %>
+    <% unless multitenancy_management_mode? %>
+      <%= link_to root_path do %>
+        <%= t("admin.dashboard.index.back", org: setting["org_name"]) %>
+      <% end %>
     <% end %>
   </div>
 
