--- a/app/views/custom/shared/_header.html.erb
+++ b/app/views/custom/shared/_header.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="row">
-      <div class="small-12 medium-6 column <%= "medium-9 small-centered text-center" unless header.image.present? %>">
+      <div class="header-content small-12 medium-6 column <%= "medium-9 small-centered text-center" unless header.image.present? %>">
         <span><%= header.label %></span>
         <h1><%= header.title %></h1>
         <p class="lead"><%= header.description %></p>
