--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -130,12 +130,19 @@
     justify-content: center;
     height: 100%;
 
-    .menu {
+    .social {
+      @include breakpoint(medium) {
+        width: 100%;
+      }
+
       li {
         padding: 0 rem-calc(8);
       }
 
       a {
+        color: inherit;
+        font-size: 0.875rem;
+        margin: 0;
         padding: 0;
       }
     }
