--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -41,18 +41,27 @@
   }
 }
 
+.wrapper > header .external-links {
+  text-align: right;
+}
+
 // Menu
 .top-bar {
   height: 60px;
 
   @include breakpoint(small down) {
     height: fit-content;
-    margin: rem-calc(8);
+    padding: rem-calc(8);
+
+    .social {
+      padding: 0;
+    }
   }
 
   .social {
     display: inline;
     margin: auto;
+    text-align: $global-left;
 
     li:first-child {
       a {
@@ -102,8 +111,10 @@
   }
 
   .middle-section {
+    flex-grow: 1;
     font-size: small;
     font-weight: 600;
+    text-align: center;
 
     a {
       color: #fff;
