--- a/app/components/budgets/investments/form_component.html.erb
+++ b/app/components/budgets/investments/form_component.html.erb
@@ -52,11 +52,10 @@
       <div>
         <%= render "map_locations/form_fields",
                    form:     f,
-                   map_location: investment.map_location || MapLocation.new,
+                   map_location: investment.map_location || investment.build_map_location,
                    label:    t("budgets.investments.form.map_location"),
                    help:     t("budgets.investments.form.map_location_instructions"),
                    remove_marker_label: t("budgets.investments.form.map_remove_marker"),
-                   parent_class: "budget_investment",
                    i18n_namespace: "budgets.investments" %>
       </div>
     <% end %>
