--- a/app/views/budgets/investments/_sidebar.html.erb
+++ b/app/views/budgets/investments/_sidebar.html.erb
@@ -25,7 +25,7 @@
 
 <% if @map_location&.available? %>
   <div class="map">
-    <%= render_map(@map_location, "budgets", investments_coordinates: @investments_map_coordinates) %>
+    <%= render_map(@map_location, investments_coordinates: @investments_map_coordinates) %>
   </div>
 <% end %>
 <%= render "shared/tag_cloud", taggable: "Budget::Investment" %>
