Render markdown tables in legislation draft (#11)
* Add Tables option to Redcarpet in Legislation draft

We used render_options and extensions variable in order to align with the existing code at app/helpers/application_helper.rb

* Allow table tags in Admin Legislation Sanitizer

* Add Test to render markdown tables in Legislation drafts

* Add Test for Admin Legislation Sanitizer

We include test for image, table and h1 to h6 tags and additional tests to strengthen the allowed and disallowed parameters

* Add custom CSS for Legislation Draft tables

We used the available variable for tables
we also make the table responsive with Foundation .scroll class for scrolling tables
 https://get.foundation/sites/docs/table.html

* Add Table from markdown test in System and Factories

* Add test to render  tables for admin user

--- a/app/assets/stylesheets/legislation_process.scss
+++ b/app/assets/stylesheets/legislation_process.scss
@@ -9,6 +9,7 @@
 // 07. Legislation comments
 // 08. Legislation draft comment
 // 09. Legislation proposals
+// 10. Legislation draft tables
 //
 
 // 01. Hero
@@ -984,5 +985,40 @@
     margin-left: 50%;
     margin-top: $line-height;
     transform: translateX(-50%);
+  }
+}
+
+// 10. Legislation draft table
+// -------------------------
+
+.draft-text {
+  table {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    border: $table-border;
+    border-collapse: collapse;
+    color: $body-font-color;
+    background-color: $table-background;
+
+    th {
+      background: $table-head-background;
+      color: $table-head-font-color;
+    }
+
+    tr {
+
+      td {
+        line-height: $line-height;
+      }
+
+      &:nth-child(odd) {
+        background: $table-background;
+      }
+
+      &:nth-child(even) {
+        background: $table-striped-background;
+      }
+    }
   }
 }
