Adapt layout changes to version 2.0.0 TODO: header is a bit broken, particularly the menu on small screens

--- a/app/components/custom/layout/top_links_component.html.erb
+++ b/app/components/custom/layout/top_links_component.html.erb
@@ -6,6 +6,6 @@
       </span>
     <% end %>
   </li>
-  <%= render "shared/admin_login_items" %>
-  <%= render "devise/menu/login_items" %>
+  <%= render Layout::AdminLoginItemsComponent.new(current_user) %>
+  <%= render Layout::LoginItemsComponent.new(current_user) %>
 </ul>
