--- a/app/views/custom/layouts/application.html.erb
+++ b/app/views/custom/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html <%= "dir=rtl" if rtl? %> lang="<%= I18n.locale %>" data-current-user-id="<%= current_user&.id %>">
+<html <%= common_html_attributes %> data-current-user-id="<%= current_user&.id %>">
   <head>
     <%= render "layouts/common_head", default_title: setting["org_name"] %>
     <%= render "layouts/meta_tags" %>
@@ -48,7 +48,7 @@
     <%= render Layout::MainLinksComponent.new %>
 
     <div class="footer">
-      <%= render "layouts/footer" %>
+      <%= render Layout::FooterComponent.new %>
     </div>
     <div class="reveal" id="googleSearch" data-reveal>
       <button class="close-button" data-close aria-label="Close modal" type="button">
