--- a/app/components/admin/settings/table_component.html.erb
+++ b/app/components/admin/settings/table_component.html.erb
@@ -17,7 +17,7 @@
         </td>
         <td>
           <% if setting.content_type? %>
-            <%= render "admin/settings/content_types_settings_form", setting: setting %>
+            <%= render Admin::Settings::ContentTypesFormComponent.new(setting) %>
           <% elsif setting.feature? %>
             <%= render Admin::Settings::FeaturedSettingsFormComponent.new(setting, tab: tab) %>
           <% else %>
