--- a/app/components/admin/settings/table_component.html.erb
+++ b/app/components/admin/settings/table_component.html.erb
@@ -21,7 +21,7 @@
           <% elsif setting.feature? %>
             <%= render Admin::Settings::FeaturedSettingsFormComponent.new(setting, tab: tab) %>
           <% else %>
-            <%= render "admin/settings/settings_form", setting: setting, tab: tab %>
+            <%= render Admin::Settings::TextFormComponent.new(setting, tab: tab) %>
           <% end %>
         </td>
       </tr>
