--- a/app/components/admin/settings/sdg_configuration_tab_component.html.erb
+++ b/app/components/admin/settings/sdg_configuration_tab_component.html.erb
@@ -1,7 +1,7 @@
 <% if feature?(:sdg) %>
   <h2><%= t("admin.settings.index.sdg.title") %></h2>
 
-  <%= render Admin::Settings::TableComponent.new(settings: @sdg_settings, setting_name: "feature", tab: "#tab-sdg-configuration") %>
+  <%= render Admin::Settings::TableComponent.new(settings: settings, setting_name: "feature", tab: "#tab-sdg-configuration") %>
 <% else %>
   <div class="callout primary">
     <%= t("admin.settings.index.sdg.how_to_enable") %>
