Move logic from key definition to views
Before this change, two important things depend on the format of each
key, where to render it in the administration panel and which kind of
interface to use for each setting. Following this strategy led us to a
very complex code, very difficult to maintain or modify. So, we do not
want to depend on the setting key structure anymore to decide how or
where to render each setting.

With this commit, we introduce methods that can easily be overriden and
allow other Consul Democracy installations to customize which settings
are rendered in which tabs as well as which settings are features.

--- a/app/views/admin/settings/index.html.erb
+++ b/app/views/admin/settings/index.html.erb
@@ -3,38 +3,34 @@
   <%= render "filter_subnav" %>
 
   <div class="tabs-panel is-active" id="tab-configuration">
-    <%= render Admin::Settings::ConfigurationSettingsTabComponent.new(@configuration_settings) %>
+    <%= render Admin::Settings::ConfigurationSettingsTabComponent.new %>
   </div>
 
   <div class="tabs-panel" id="tab-participation-processes">
-    <%= render Admin::Settings::ParticipationProcessesTabComponent.new(@participation_processes_settings) %>
+    <%= render Admin::Settings::ParticipationProcessesTabComponent.new %>
   </div>
 
   <div class="tabs-panel" id="tab-feature-flags">
-    <%= render Admin::Settings::FeaturesTabComponent.new(@feature_settings) %>
+    <%= render Admin::Settings::FeaturesTabComponent.new %>
   </div>
 
   <div class="tabs-panel" id="tab-map-configuration">
-    <%= render Admin::Settings::MapConfigurationTabComponent.new(@map_configuration_settings) %>
+    <%= render Admin::Settings::MapConfigurationTabComponent.new %>
   </div>
 
   <div class="tabs-panel" id="tab-images-and-documents">
-    <%= render Admin::Settings::ImagesAndDocumentsTabComponent.new(@uploads_settings) %>
+    <%= render Admin::Settings::ImagesAndDocumentsTabComponent.new %>
   </div>
 
   <div class="tabs-panel" id="tab-proposals">
-    <%= render Admin::Settings::ProposalsDashboardComponent.new(@proposals_settings) %>
+    <%= render Admin::Settings::ProposalsDashboardComponent.new %>
   </div>
 
   <div class="tabs-panel" id="tab-remote-census-configuration">
-    <%= render Admin::Settings::RemoteCensusConfigurationTabComponent.new(
-      general_settings: @remote_census_general_settings,
-      request_settings: @remote_census_request_settings,
-      response_settings: @remote_census_response_settings
-    ) %>
+    <%= render Admin::Settings::RemoteCensusConfigurationTabComponent.new %>
   </div>
 
   <div class="tabs-panel" id="tab-sdg-configuration">
-    <%= render Admin::Settings::SDGConfigurationTabComponent.new(@sdg_settings) %>
+    <%= render Admin::Settings::SDGConfigurationTabComponent.new %>
   </div>
 </div>
