--- a/app/components/admin/settings/table_component.html.erb
+++ b/app/components/admin/settings/table_component.html.erb
@@ -16,9 +16,9 @@
           </span>
         </td>
         <td>
-          <% if setting.content_type? %>
+          <% if content_type_setting?(setting) %>
             <%= render Admin::Settings::ContentTypesFormComponent.new(setting, tab: tab) %>
-          <% elsif setting.feature? %>
+          <% elsif feature_setting?(setting) %>
             <%= render Admin::Settings::FeaturedSettingsFormComponent.new(setting, tab: tab) %>
           <% else %>
             <%= render Admin::Settings::TextFormComponent.new(setting, tab: tab) %>
