Add cookies consent banner feature
This is an elementary version similar to the one that implements the
`cookies-eu` gem.

The feature is optional and disabled by default, so current
installations within countries with no cookie regulation can ignore it.
The USA does not have rules for cookie usage, for example.

--- a/app/views/custom/layouts/application.html.erb
+++ b/app/views/custom/layouts/application.html.erb
@@ -27,6 +27,7 @@
     <div class="footer">
       <%= render Layout::FooterComponent.new %>
     </div>
+    <%= render Layout::CookiesConsent::BannerComponent.new %>
     <div class="reveal" id="googleSearch" data-reveal>
       <button class="close-button" data-close aria-label="Close modal" type="button">
         <span aria-hidden="true">&times;</span>
