--- a/app/components/custom/layout/cookies_consent/banner_component.html.erb
+++ b/app/components/custom/layout/cookies_consent/banner_component.html.erb
@@ -1,6 +1,9 @@
 <div id="cookies_consent_banner" class="cookies-consent-banner">
   <h2><%= t("cookies_consent.title") %></h2>
   <p><%= t("cookies_consent.message") %></p>
+  <% if more_info_link.present? %>
+    <p><%= link_to t("cookies_consent.more_info_link"), more_info_link %></p>
+  <% end%>
 
   <button type="button" class="accept-cookies"><%= t("cookies_consent.accept") %></button>
 </div>
