Add support for third party cookies
Consul Democracy does not use third party cookies, but as most of the
forks do we are providing a way to do it.

When administradors add third party entries to this setting its content
will be shown in the cookies setup page so users can know what tools the
application runs and decide whether to use them or not.

--- a/app/components/custom/layout/cookies_consent/banner_component.html.erb
+++ b/app/components/custom/layout/cookies_consent/banner_component.html.erb
@@ -6,4 +6,9 @@
   <% end%>
 
   <button type="button" class="accept-cookies"><%= t("cookies_consent.accept") %></button>
+
+  <% if feature?("cookies_consent.setup_page") %>
+    <button type="button" class="reject-cookies"><%= t("cookies_consent.reject") %></button>
+    <button type="button" data-open="cookies_consent_setup" class="setup"><%= t("cookies_consent.setup") %></button>
+  <% end %>
 </div>
