--- a/app/views/custom/layouts/application.html.erb
+++ b/app/views/custom/layouts/application.html.erb
@@ -28,6 +28,7 @@
       <%= render Layout::FooterComponent.new %>
     </div>
     <%= render Layout::CookiesConsent::BannerComponent.new %>
+    <%= render Layout::CookiesConsent::SetupComponent.new %>
     <div class="reveal" id="googleSearch" data-reveal>
       <button class="close-button" data-close aria-label="Close modal" type="button">
         <span aria-hidden="true">&times;</span>
