--- a/app/components/custom/layout/footer_component.html.erb
+++ b/app/components/custom/layout/footer_component.html.erb
@@ -17,12 +17,19 @@
       <% end %>
     </div>
     <div class="small-12 large-2 column">
-      <%= link_to page_path("cookies") do %>
-        <div class="footer-link">
-          <%= image_tag(image_path_for("icono-cookies-footer.png"), alt: "") %>
-          <span><%= t("layouts.footer.links.cookies") %></span>
-        </div>
-      <% end %>
+      <div class="footer-link">
+        <% if cookies_setup_page_enabled? %>
+          <%= link_to "#cookies_consent_setup", "data-open": "cookies_consent_setup" do %>
+            <%= image_tag(image_path_for("icono-cookies-footer.png"), alt: "") %>
+            <span><%= t("layouts.footer.cookies_consent_setup") %></span>
+          <% end %>
+        <% else %>
+          <%= link_to page_path("cookies") do %>
+            <%= image_tag(image_path_for("icono-cookies-footer.png"), alt: "") %>
+            <span><%= t("layouts.footer.links.cookies") %></span>
+          <% end %>
+        <% end %>
+      </div>
     </div>
     <div class="small-12 large-2 column">
       <%= link_to new_contact_path do %>
