Add cookies vendors to the cookies setup page

--- a/app/assets/stylesheets/custom/layout/cookies_consent_setup.scss
+++ b/app/assets/stylesheets/custom/layout/cookies_consent_setup.scss
@@ -38,6 +38,10 @@
         margin-bottom: $line-height / 3;
       }
     }
+
+    &.save-cookies-preferences {
+      @include hollow-button;
+    }
   }
 }
 
