[WIP] Do not show cookie banner when javascript is disabled

--- a/app/views/custom/layouts/_no_script.html.erb
+++ b/app/views/custom/layouts/_no_script.html.erb
@@ -3,5 +3,9 @@
     .admin .tabs-content > .tabs-panel {
       display: block;
     }
+
+    .cookies-consent-banner {
+      display: none;
+    }
   </style>
 </noscript>
