--- a/app/views/custom/layouts/application.html.erb
+++ b/app/views/custom/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <%= render "layouts/common_head", default_title: setting["org_name"] %>
     <%= render "layouts/meta_tags" %>
+    <%= render "layouts/no_script" %>
     <%= content_for :canonical %>
     <%= favicon_link_tag image_path_for("apple-touch-icon-200.png"),
                          rel: "icon apple-touch-icon",
