--- a/app/views/custom/admin/legislation/processes/_form.html.erb
+++ b/app/views/custom/admin/legislation/processes/_form.html.erb
@@ -110,19 +110,11 @@
 
   <div class="row">
     <div class="documents small-12 column">
-      <%= render "documents/nested_documents", f: f %>
-    </div>
-
-    <div class="small-12 column">
-      <hr>
+      <%= render Documents::NestedComponent.new(f) %>
     </div>
 
     <div class="images small-12 column">
-      <%= render "images/nested_image", f: f %>
-    </div>
-
-    <div class="small-12 column">
-      <hr>
+      <%= render Images::NestedComponent.new(f) %>
     </div>
 
     <div class="small-12 column">
@@ -153,10 +145,6 @@
           <%= f.text_field :font_color, label: false, id: "font_color_input" %>
         </div>
       </div>
-    </div>
-
-    <div class="small-12 column">
-      <hr>
     </div>
   </div>
 
