--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -502,9 +502,13 @@ code {
   flex-wrap: wrap;
 
   a,
-  button {
+  button,
+  form {
     margin-#{$global-left}: auto;
+  }
 
+  a,
+  button {
     &:not(.delete) {
       @include regular-button;
       margin-#{$global-left}: auto;
