--- a/app/components/admin/site_customization/images/table_actions_component.html.erb
+++ b/app/components/admin/site_customization/images/table_actions_component.html.erb
@@ -10,8 +10,7 @@
     <%= render Admin::ActionComponent.new(
       :destroy,
       image,
-      path: admin_site_customization_image_path(image),
-      method: :delete
+      path: admin_site_customization_image_path(image)
     ) %>
   <% end %>
 </div>
