--- a/app/components/admin/site_customization/pages/edit_component.html.erb
+++ b/app/components/admin/site_customization/pages/edit_component.html.erb
@@ -6,6 +6,7 @@
     @page,
     text: t("admin.site_customization.pages.index.delete"),
     method: :delete,
+    confirm: true,
     class: "delete"
   ) %>
 <% end %>
