Use a header for the auth page
```
region: All page content should be contained by landmarks (moderate)
https://dequeuniversity.com/rules/axe/4.9/region?application=axeAPI
The following node violate this rule:

  <div class="auth-image small-12 medium-3 column"
       style="background-image: url('/assets/auth_bg.jpg');">
  Fix any of the following:
  - Some page content is not contained by landmarks
```

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -797,6 +797,9 @@ footer {
 // --------------
 
 .auth-page {
+  .wrapper > header {
+    margin-bottom: 0;
+  }
 
   .footer {
     margin-top: 0;
