--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -10,14 +10,14 @@
     <%= render Layout::SkipToMainContentComponent.new %>
     <%= raw setting["html.per_page_code_body"] %>
     <div class="wrapper">
-      <div class="auth-image small-12 medium-3 column"
+      <header class="auth-image small-12 medium-3 column"
            style="<%= attached_background_css asset_url(image_path_for("auth_bg.jpg")) %>">
         <h1 class="logo margin">
           <%= link_to root_path do %>
             <%= image_tag(image_path_for("logo_header.png"), class: "float-left", alt: setting["org_name"]) %>
           <% end %>
         </h1>
-      </div>
+      </header>
 
       <div class="small-12 medium-9 column">
         <div class="row">
