--- a/app/views/admin/site_customization/information_texts/_globalize_locales.html.erb
+++ b/app/views/admin/site_customization/information_texts/_globalize_locales.html.erb
@@ -1,3 +1,1 @@
-<%= render "shared/common_globalize_locales",
-           resource: nil,
-           display_style: lambda { |locale| site_customization_display_translation_style(locale) } %>
+<%= render "shared/common_globalize_locales", resource: nil %>
