--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@
 @import "milestones";
 @import "pages";
 @import "dashboard";
+@import "globalize_locales";
 @import "in_favor_against";
 @import "legislation";
 @import "legislation_process";
