Make delete color darker
The contrast of this color didn't meet the minimum required contrast
when used against backgrounds other than white (for example, in the
globalize locales form controls).

--- a/app/assets/stylesheets/_consul_settings.scss
+++ b/app/assets/stylesheets/_consul_settings.scss
@@ -80,7 +80,7 @@ $debates:           $brand !default;
 $like:              #38a36f !default;
 $unlike:            #ea6666 !default;
 
-$delete:            #db2e0f !default;
+$delete:            #d12c0e !default;
 $check:             #46db91 !default;
 
 $proposals:         #ffa42d !default;
