--- a/app/views/admin/banners/_form.html.erb
+++ b/app/views/admin/banners/_form.html.erb
@@ -46,11 +46,11 @@
 
   <div class="row">
     <div class="small-12 medium-6 large-3 column">
-      <%= f.label :background_color, nil, for: "background_color_input" %>
+      <%= f.label :background_color, nil, for: "background_color_input", id: "background_color_label" %>
       <p class="help-text"><%= t("admin.shared.color_help") %></p>
       <div class="row collapse">
         <div class="small-12 medium-6 column">
-          <%= f.text_field :background_color, label: false, type: :color %>
+          <%= f.text_field :background_color, label: false, type: :color, "aria-labelledby": "background_color_label" %>
         </div>
         <div class="small-12 medium-6 column">
           <%= f.text_field :background_color, label: false, id: "background_color_input" %>
@@ -59,11 +59,11 @@
     </div>
 
     <div class="small-12 medium-6 large-3 column end">
-      <%= f.label :font_color, nil, for: "font_color_input" %>
+      <%= f.label :font_color, nil, for: "font_color_input", id: "font_color_label" %>
       <p class="help-text"><%= t("admin.shared.color_help") %></p>
       <div class="row collapse">
         <div class="small-12 medium-6 column">
-          <%= f.text_field :font_color, label: false, type: :color %>
+          <%= f.text_field :font_color, label: false, type: :color, "aria-labelledby": "font_color_label" %>
         </div>
         <div class="small-12 medium-6 column">
           <%= f.text_field :font_color, label: false, id: "font_color_input" %>
