Try to differentiate navigation tags
```
landmark-unique: Ensures landmarks are unique (moderate)
https://dequeuniversity.com/rules/axe/4.9/landmark-unique?application=axeAPI

The following 1 node violate this rule:

  Selector: .hide-for-small-only > nav
  HTML: <nav>
  Fix any of the following:
  - The landmark must have a unique aria-label, aria-labelledby,
    or title to make landmarks distinguishable
```

--- a/app/views/legislation/processes/_key_dates.html.erb
+++ b/app/views/legislation/processes/_key_dates.html.erb
@@ -1,8 +1,8 @@
-<nav class="<%= "legislation-process-list" if process.enabled_phases? %>">
+<nav class="<%= "legislation-process-list" if process.enabled_phases? %>" aria-labelledby="legislation_process_list_heading"><%# TODO What if there are no enabled phases? %>
   <div class="row">
     <div class="small-12 column">
       <% if process.enabled_phases? %>
-        <h3><%= t("legislation.processes.shared.key_dates") %></h3>
+        <h3 id="legislation_process_list_heading"><%= t("legislation.processes.shared.key_dates") %></h3>
       <% end %>
 
       <ul class="key-dates">
