Make the link color contrast with the text TODO: why not just underlying it? NOTE: 143 failures at this point

--- a/app/assets/stylesheets/_consul_settings.scss
+++ b/app/assets/stylesheets/_consul_settings.scss
@@ -158,7 +158,7 @@ $sdg-colors: (
 // 3. Foundation overrides depending on CONSUL DEMOCRACY variables
 // ---------------------------------------------------------------
 
-$anchor-color: $brand !default;
+$anchor-color: color.adjust($brand, $lightness: 12.5%) !default;
 $anchor-color-hover: color.adjust($anchor-color, $lightness: -20%) !default;
 
 $tab-background-active: $white !default;
