--- a/app/views/admin/budget_investments/_search_form.html.erb
+++ b/app/views/admin/budget_investments/_search_form.html.erb
@@ -33,36 +33,40 @@
   </div>
 
   <div class="small-12 medium-3 column">
+    <%= label_tag :administrator_id %>
     <%= select_tag :administrator_id,
                    options_for_select(admin_select_options(@budget), params[:administrator_id]),
                    { prompt: t("admin.budget_investments.index.administrator_filter_all") } %>
   </div>
   <div class="small-12 medium-3 column">
+    <%= label_tag :valuator_or_group_id %>
     <%= select_tag :valuator_or_group_id,
                    options_for_select(valuator_or_group_select_options(@budget), params[:valuator_or_group_id]),
                    { prompt: t("admin.budget_investments.index.valuator_filter_all") } %>
   </div>
   <div class="small-12 medium-3 column">
+    <%= label_tag :heading_id %>
     <%= select_tag :heading_id,
                    options_for_select(budget_heading_select_options(@budget), params[:heading_id]),
                    { prompt: t("admin.budget_investments.index.heading_filter_all") } %>
   </div>
   <div class="small-12 medium-3 column">
+    <%= label_tag :label_name %>
     <%= select_tag :tag_name,
                    options_for_select(investment_tags_select_options(@budget, "valuation_tags"), params[:tag_name]),
                    { prompt: t("admin.budget_investments.index.tags_filter_all") } %>
   </div>
 
   <div class="small-12 medium-3 column">
+    <%= label_tag :milestone_tag_name %>
     <%= select_tag :milestone_tag_name,
                    options_for_select(investment_tags_select_options(@budget, "milestone_tags"), params[:milestone_tag_name]),
                    { prompt: t("admin.budget_investments.index.milestone_tags_filter_all") } %>
   </div>
 
   <div class="small-12 medium-6 column">
-    <div class="input-group">
-      <%= text_field_tag :title_or_id, params["title_or_id"], placeholder: t("admin.budget_investments.index.placeholder") %>
-    </div>
+    <%= label_tag :title_or_id %>
+    <%= text_field_tag :title_or_id, params["title_or_id"], placeholder: t("admin.budget_investments.index.placeholder") %>
   </div>
 
   <div class="small-12 medium-3 column end">
