--- a/app/views/admin/audits/show.html.erb
+++ b/app/views/admin/audits/show.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title) do %>
   <%= t("admin.audits.title") %>
 <% end %>
-<%= back_link_to request.referer || admin_audits_path %>
+<%= back_link_to admin_polymorphic_path(@audit.associated || @audit.auditable) %>
 
 <h2><%= t("admin.audits.title") %></h2>
 
