Rename field_name helper to audit_field_name
Rails 7.0, which is used in Consul since commit 8596f1539 includes a
`field_name` helper and, since helpers are basically global methods and
we had a `field_name` method in one helper, we were overwriting the one
included in Rails.

So we're renaming it in order to avoid the conflict.

--- a/app/components/custom/admin/audits/show_component.html.erb
+++ b/app/components/custom/admin/audits/show_component.html.erb
@@ -5,7 +5,7 @@
 
 <% audit.audited_changes.each do |field, changes| %>
   <strong><%= t("admin.audits.field") %></strong>
-  <p><%= sanitize(field_name(audit, field)) %></p>
+  <p><%= sanitize(audit_field_name(audit, field)) %></p>
   <strong><%= t("admin.audits.old_value") %></strong>
   <p><%= wysiwyg(audit_value(old_value(audit, changes))) %></p>
   <strong><%= t("admin.audits.new_value") %></strong>
