--- a/app/views/custom/admin/audits/_audits.html.erb
+++ b/app/views/custom/admin/audits/_audits.html.erb
@@ -20,7 +20,7 @@
         <% audit.audited_changes.each do |field, changes| %>
           <tr>
             <td class="text-center"><%= audit.id %></td>
-            <td class="small"><%= sanitize(field_name(audit, field)) %></td>
+            <td class="small"><%= sanitize(audit_field_name(audit, field)) %></td>
             <td class="small">
               <div class="audit-value"><%= truncate_audit_value(old_value(audit, changes)) %></div>
             </td>
