--- a/app/components/custom/admin/audits/row_component.html.erb
+++ b/app/components/custom/admin/audits/row_component.html.erb
@@ -2,7 +2,7 @@
   <tr>
     <td><%= audit.id %></td>
     <td><%= audit.auditable_type %>#<%= audit.auditable_id %></td>
-    <td><%= sanitize(field_name(audit, field)) %></td>
+    <td><%= sanitize(audit_field_name(audit, field)) %></td>
     <td><%= truncate(audit_value(old_value(audit, changes)), length: 50) %></td>
     <td><%= truncate(audit_value(new_value(audit, changes)), length: 50) %></td>
     <td><%= l audit.created_at, format: :datetime %></td>
