--- a/app/views/custom/layouts/application.html.erb
+++ b/app/views/custom/layouts/application.html.erb
@@ -15,13 +15,16 @@
     <%= render Cookies::Vendors::ScriptsComponent.new %>
   </head>
   <body class="<%= yield(:body_class) %> public">
+    <%= render Layout::SkipToMainContentComponent.new %>
     <%= raw setting["html.per_page_code_body"] %>
 
     <div class="wrapper <%= yield(:wrapper_class) %>">
       <%= render "layouts/header", with_subnavigation: true %>
-      <%= render "layouts/flash" %>
 
-      <%= yield %>
+      <main id="main" class="public-content <%= yield(:main_class) %>">
+        <%= render "layouts/flash" %>
+        <%= yield %>
+      </main>
     </div>
 
     <%= render Layout::MainLinksComponent.new %>
