--- a/app/views/management/budgets/investments/index.html.erb
+++ b/app/views/management/budgets/investments/index.html.erb
@@ -1,5 +1,5 @@
 <span class="not-print">
-  <%= render Management::Budgets::Investments::SearchComponent.new(@budget, url: management_budget_investments_path(@budget)) %>
+  <%= render Management::Budgets::Investments::SearchComponent.new(@budget, action: :index) %>
 </span>
 
 <div class="wrap row">
