--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,7 @@
 @import "documents/**/*";
 @import "layout/**/*";
 @import "machine_learning/**/*";
+@import "management/**/*";
 @import "moderation/**/*";
 @import "polls/**/*";
 @import "proposals/**/*";
