--- a/app/components/admin/budgets_wizard/headings/group_switcher_component.html.erb
+++ b/app/components/admin/budgets_wizard/headings/group_switcher_component.html.erb
@@ -9,7 +9,7 @@
     <p><%= currently_showing_text %></p>
     <ul class="dropdown menu" data-dropdown-menu data-disable-hover="true" data-click-open="true">
       <li class="has-submenu">
-        <button type="button"><%= t("admin.budget_headings.group_switcher.different_group") %></button>
+        <a href="#"><%= t("admin.budget_headings.group_switcher.different_group") %></a>
         <ul class="menu" data-submenu>
           <% other_groups.each do |other_group| %>
             <li><%= link_to other_group.name, headings_path(other_group) %></li>
